# learning-all

./: .gitignore
BiometricSecuritySaaSTestTask/: BiometricSecuritySaaSTestTask.sln  Program.cs  README.txt  names.txt  photoindex.csproj  photos.txt
CrackingGoogleInterviewBookTasks/: PreparingToInterview.sln
FacebookInterviewTasks/: input17.txt
System.Unsafe/: System.Unsafe.sln  TestResult.xml  build.cmd
YandexInterview/: context.txt
ai/: AIbyExample.sln  HumanoidAgentStateLimits.cs  Locations.cs
algorithms/: 10.c  2.c  2.h  7.h  SequenceOfZeroesInBinaryNumber.txt  UpgradeLog.htm  calgo.cbp  calgo.layout  introduction-to-algorithms.cproj  introduction-to-algorithms.sln  main.c  utils.c  utils.h
c/: main.c
cleveralgorithms/: CleverAlgorithms.mm
cpp/: fibonacci_iterative_simple.cpp  stdafx.h
csharp/: Program.cs  asd.csproj  asd.sln
data/: some_other  sophie.py  sophie1.py
data_formats/: json_mini.json  json_pretty.json  xml_mini.xml  xml_pretty.xml
essentialcpp/: excercise.depend  excercise.layout  stdafx.cpp
focs/: 1.md
formats/: 123456789.txt  empty_5_doc_pages.xps
introduction-to-algorithms/: 2.2.txt  7.c  9.c  9.h  Problems_2.txt  introduction-to-algorithms.pidb  introduction-to-algorithms.sln  introduction-to-algorithms.userprefs  main.cpp
languages/: german.md  latin.txt
law/: individual-enterpreneur-belarus.txt
machine-learning/: SiliconBrain.md
math/: discrete.md
modelling/: modelling.sln
prolog/: lab.pl  lab.pl~
rust/: io_1.rs  (+21 more)
rust/blockchain/solana/: .env  Cargo.toml  readme.md
rust/blockchain/solana/src/: main.rs
(+958 files in other folders)
