[package]
name = "solana-test"
version = "0.1.0"
authors = ["dzmitry.lahoda <dzmitry@lahoda.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.14.0"
serde_json = "1.0.61"
solana-account-decoder = "1.5.6"
solana-clap-utils = "1.5.6"
solana-cli-config = "1.5.6"
solana-cli-output = "1.5.6"
solana-client = "1.5.6"
solana-logger = "1.5.6"
solana-remote-wallet = "1.5.6"
solana-sdk = "1.5.6"
solana-program = "*"
spl-token = "*"

#spl-token = { version = "3.1", path="../program", features = [ "no-entrypoint" ] }
#spl-associated-token-account = { version = "1.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }